// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. Render a single author 1`] = `
<div>
  <a
    href="/profile/alexandra-frean"
    role="link"
  >
    Alexandra Frean
  </a>
</div>
`;

exports[`2. Render a given section colour 1`] = `
<div>
  <a
    href="/profile/alexandra-frean"
    role="link"
    style={
      Object {
        "color": "blue",
      }
    }
  >
    Alexandra Frean
  </a>
</div>
`;

exports[`3. Render an inline element 1`] = `
<div>
  <div>
    Lindsay McIntosh Scottish Political Editor
  </div>
</div>
`;

exports[`4. Render an author first 1`] = `
<div>
  <a
    href="/profile/camilla-long"
    role="link"
  >
    Camilla Long
  </a>
  <div>
    , Environment Editor
  </div>
</div>
`;

exports[`5. Render an author last 1`] = `
<div>
  <div>
    RBS Six Nations 
  </div>
  <a
    href="/profile/mike-atherton"
    role="link"
  >
    Mike Atherton
  </a>
</div>
`;

exports[`6. Render multiple authors separated by commas 1`] = `
<div>
  <a
    href="/profile/camilla-long"
    role="link"
  >
    Camilla Long
  </a>
  <div>
    , 
  </div>
  <a
    href="/profile/mike-atherton"
    role="link"
  >
    Mike Atherton
  </a>
  <div>
    , 
  </div>
  <a
    href="/profile/alexandra-frean"
    role="link"
  >
    Alexandra Frean
  </a>
</div>
`;

exports[`7. Render multiple authors separated by spaces 1`] = `
<div>
  <a
    href="/profile/camilla-long"
    role="link"
  >
    Camilla Long
  </a>
  <div>
     
  </div>
  <a
    href="/profile/mike-atherton"
    role="link"
  >
    Mike Atherton
  </a>
  <div>
     
  </div>
  <a
    href="/profile/alexandra-frean"
    role="link"
  >
    Alexandra Frean
  </a>
</div>
`;

exports[`8. Render null when AST is empty 1`] = `null`;

exports[`9. Render an author with given styles 1`] = `
<div>
  <a
    href="/profile/alexandra-frean"
    role="link"
    style={
      Object {
        "color": "red",
      }
    }
  >
    Alexandra Frean
  </a>
</div>
`;
